--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conker-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://mkst.github.io/conker-website",
+  "homepage": "https://conker.deco.mp",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
