--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ yarn-error.log*
 
 # generated
 public/latest.json
-public/summary.json
+public/commits.json
 
 # symlinks
 progress/data/progress.csv
